Fix grid gaps

--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,8 @@ body {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, auto);
-        gap: 50px;
+        grid-row-gap: 4em;
+        grid-column-gap: 1em;
         margin: 5em auto;
         max-width: 1200px;
     }
